unpackaged/main/default/objects/childabc__c/childabc__c.object-meta.xml
<CustomObject>
	<label>childabc</label>
	<nameField>
		<label>childabc Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>childabcs</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>