unpackaged/main/default/objects/childabc__c/fields/bbbb__c.field-meta.xml
<CustomField>
	<fullName>bbbb__c</fullName>
	<label>bbbb</label>
	<precision>18</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>