unpackaged/main/default/objects/childabc__c/fields/gggg__c.field-meta.xml
<CustomField>
	<fullName>gggg__c</fullName>
	<label>gggg</label>
	<length>200</length>
	<type>Text</type>
</CustomField>