unpackaged/main/default/objects/childabc__c/fields/parent_link_required__c.field-meta.xml
<CustomField>
	<fullName>parent_link_required__c</fullName>
	<deleteConstraint>Restrict</deleteConstraint>
	<label>parentabc</label>
	<referenceTo>parentabc__c</referenceTo>
	<relationshipLabel>childabcs</relationshipLabel>
	<relationshipName>parent_link_required</relationshipName>
	<required>true</required>
	<type>Lookup</type>
</CustomField>